2002-09-26  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nh-sentinel): Don't pop to process buffer on signal.

	* nethack-api.el (nhapi-create-message-window): Erase the buffer.
	(nhapi-block): Clear the message highlight after input.
	(nhapi-raw-print): Pop to the raw-print-buffer.

2002-09-20  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-el-version): Add function.
	(nethack-el-version): Add variable.

	* nethack-cmd.el (version): Show nethack-el version.

	* nethack-example.el (nethack-x-timestamp-message): Rename from
	`nethack-timestamp-message'.
	(nethack-x-gdb): Rename from `nh-gdb'.
	(nethack-x-warn-low-hp): Add function.

	* nethack-api.el (nh-status-string): Add function.
	(nh-status-n, nh-status-w, nh-status-s, nh-status-d, nh-status-c) 
	(nh-status-i, nh-status-W, nh-status-C, nh-status-A, nh-status-L) 
	(nh-status-l, nh-status-g, nh-status-h, nh-status-p, nh-status-a) 
	(nh-status-e, nh-status-t, nh-status-f): Add functions.

	* nethack.el (nethack-status-attribute-change-functions): Rename
	from `nethack-status-attribute-change-hook'.

	* nethack-api.el (nh-print-status): Rewrite.

	* nethack.el (nethack-status-format): Remove variable.
	(nethack-status-in-modeline): Remove variable.
	(nethack-status-buffer-format): Add variable.
	(nethack-status-mode-line-format): Add variable.
	(nethack-status-header-line-format): Add variable.

	* nethack-keys.el: Remove require.

	* nethack-glyphs.el (nh-empty-tile): Rename from
	nethack-empty-tile.
	(nh-tile-vector): Rename from nethack-glyph-vector.

	* nethack-cmd.el: Add provide line.

	* nethack-api.el: Move all customizable variables and face
	definitions to nethack.el.

	* nethack.el: Reorder functions and variables.  Cosmetic change.
	Update comments.
	
2002-09-19  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el: Rename all "non-user" functions and variables from
	nethack-* to nh-*.  Rename all nethack-api-* functions and
	variables to nhapi-*.  Rename all references of "glyphs" to